have a nice day!

--- a/indexes/nsc1025/90.md
+++ b/indexes/nsc1025/90.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】对比二战 看对中共实行绥靖政策](../../pages/nsc1025/n12934663.md) 
+#### [周晓辉：三大战役拿平民当炮灰 围长春饿死几十万](../../pages/nsc1025/n12934921.md) 
 #### [王赫：中共对澳经济胁迫伎俩踢到钢板](../../pages/nsc1025/n12934094.md) 
 #### [古风：中共嘲讽印度 当心乐极生悲](../../pages/nsc1025/n12934194.md) 
 #### [杨威：联合国成中共争霸战场透国际危局](../../pages/nsc1025/n12933773.md) 
@@ -28,8 +30,6 @@
 #### [周晓辉：中共挑起内战 刘邓挺进大别山失败被粉饰](../../pages/nsc1025/n12929004.md) 
 #### [【有冇搞错】中共航母的那些黑幕和猫腻](../../pages/nsc1025/n12927153.md) 
 #### [未普：特斯拉的中国梦危矣](../../pages/nsc1025/n12928142.md) 
-#### [梁知：“母亲节”话母亲们的悲惨遭遇](../../pages/nsc1025/n12928112.md) 
-#### [王友群：习近平遭遇巨大挑战的四大信号](../../pages/nsc1025/n12927294.md) 
 
 ---
 #### 第 [ [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) ] 页
