--- a/indexes/nsc993/51.md
+++ b/indexes/nsc993/51.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [慧真：大陆实况奇闻录（一）](../../pages/nsc993/n12945811.md) 
+#### [陈达：人无避雷针](../../pages/nsc993/n12947098.md) 
+#### [【网海拾贝】比战狼更凶残的戳瞎外交](../../pages/nsc993/n12945717.md) 
 #### [【网海拾贝】共产党没底线，什么坏事都可能干](../../pages/nsc993/n12942090.md) 
 #### [袁斌：官方掩盖中学生坠亡真相 网友斥“糊弄谁”](../../pages/nsc993/n12942029.md) 
 #### [【网海拾贝】巴西总统暗指疫情是中共生化战](../../pages/nsc993/n12938999.md) 
@@ -27,9 +30,6 @@
 #### [袁斌：出生率降低大陆网民喊爽折射了什么？](../../pages/nsc993/n12913365.md) 
 #### [【网海拾贝】极权是人类的恶魔灾星](../../pages/nsc993/n12910697.md) 
 #### [伊利夏提：在自责与内疚中的挣扎](../../pages/nsc993/n12910493.md) 
-#### [慧真：勿被红歌迷 觉醒弃赤魔](../../pages/nsc993/n12910485.md) 
-#### [【网海拾贝】外商进中国相当于羊入狼口](../../pages/nsc993/n12908274.md) 
-#### [【网海拾贝】全方位抗共已成美国长远国策](../../pages/nsc993/n12906878.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
