have a nice day!

--- a/indexes/nsc1025/92.md
+++ b/indexes/nsc1025/92.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共科兴疫苗外交的多重危险](../../pages/nsc1025/n12949372.md) 
+#### [华盛顿总统智慧：宗教与道德为政治繁荣之本](../../pages/nsc1025/n12949450.md) 
 #### [陈思敏：习近平河南考察 可知“豆腐渣”安置房？](../../pages/nsc1025/n12948694.md) 
 #### [袁斌：新华社“还原”学生坠亡事件的醉翁之意](../../pages/nsc1025/n12948644.md) 
 #### [谢田：中共耳目遍布国际 美国从严审视](../../pages/nsc1025/n12948508.md) 
@@ -28,8 +30,6 @@
 #### [钟原：李克强继续要求过紧日子](../../pages/nsc1025/n12940647.md) 
 #### [【名家专栏】金德芳：对台湾战略模糊的前景](../../pages/nsc1025/n12939564.md) 
 #### [王友群：盘点孟建柱七名落马的副部级旧部](../../pages/nsc1025/n12940595.md) 
-#### [周晓辉：北京幻想破灭 大陆专家支招难解困境](../../pages/nsc1025/n12939891.md) 
-#### [【名家专栏】为何美国民众需甄别媒体偏见](../../pages/nsc1025/n12939558.md) 
 
 ---
-#### 第 [ [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) ] 页
+#### 第 [ [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) ] 页
