--- a/indexes/nsc993/51.md
+++ b/indexes/nsc993/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共怎会容中国人讨要真相](../../pages/nsc993/n12952161.md) 
 #### [【网海拾贝】中国生育率可能降至全球最低](../../pages/nsc993/n12948793.md) 
 #### [颜纯钩：没有公义的社会有多可怕？](../../pages/nsc993/n12947626.md) 
 #### [付宁：基督徒为什么应该声援法轮功？](../../pages/nsc993/n12947233.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】中国人口普查数据有多难看？](../../pages/nsc993/n12917822.md) 
 #### [【网海拾贝】中国才是真正的“无依之地”](../../pages/nsc993/n12915845.md) 
 #### [袁斌：人口普查数据延迟公布 网友：官方“正在编”](../../pages/nsc993/n12915748.md) 
-#### [【网海拾贝】西方联合军演震慑中共](../../pages/nsc993/n12913466.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
