have a nice day!

--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [花丛中的骑士：骑士精神简史](../../pages/nsc1028/n12952850.md) 
 #### [袁斌：毛的帝王般生活 却宣传成“与人民同甘共苦”](../../pages/nsc1028/n12938801.md) 
 #### [王友群：第十任中共党魁江泽民面临的最后结局](../../pages/nsc1028/n12933748.md) 
 #### [中共罪行录之十二：“无产阶级文化大革命”](../../pages/nsc1028/n12928000.md) 
@@ -29,7 +30,6 @@
 #### [王友群：第九任中共党魁赵紫阳的最后结局](../../pages/nsc1028/n12888201.md) 
 #### [中共罪行录之七：百岁老人笔下的中共黑幕](../../pages/nsc1028/n12887429.md) 
 #### [中共罪行录之六：毛时代的腐败](../../pages/nsc1028/n12886353.md) 
-#### [周晓辉：“三大纪律”下的绑票与中共建国中国](../../pages/nsc1028/n12882305.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
