--- a/indexes/nsc1025/92.md
+++ b/indexes/nsc1025/92.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [向真：褒奖与贺卡 彰显人心归向](../../pages/nsc1025/n12953141.md) 
+#### [程晓农：气候政策少为人知的迷惑](../../pages/nsc1025/n12952815.md) 
 #### [袁斌：新华社“还原”的学生坠楼“真相”可信吗？](../../pages/nsc1025/n12951854.md) 
 #### [王赫：为中国争光的在美华人](../../pages/nsc1025/n12904656.md) 
 #### [钟原：习近平戴口罩透露疫情或有多严重](../../pages/nsc1025/n12950721.md) 
@@ -28,8 +30,6 @@
 #### [感恩——献给法轮大法洪传29周年](../../pages/nsc1025/n12942453.md) 
 #### [周晓辉：黄炎培上了毛的当中共建政大典奏哀乐](../../pages/nsc1025/n12942780.md) 
 #### [王友群：严正警告袭击香港记者梁珍的中共特务](../../pages/nsc1025/n12941630.md) 
-#### [古风：新华社纽约时代广场买广告招骂](../../pages/nsc1025/n12941136.md) 
-#### [王赫：中国经济迷思之一——持续增长？](../../pages/nsc1025/n12941076.md) 
 
 ---
 #### 第 [ [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) ] 页
