--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [清流：二婶，我就要找一个炼法轮功的女友（下）](../../pages/nsc1035/n12953189.md) 
 #### [造福社会和时代的法轮大法修炼人](../../pages/nsc1035/n12944018.md) 
 #### [川人：“世界法轮大法日”感怀](../../pages/nsc1035/n12932771.md) 
 #### [清竹：台湾显现的正能量在与苍穹同辉](../../pages/nsc1035/n12928084.md) 
@@ -29,7 +30,6 @@
 #### [美心理治疗师：真正的宽恕是什么？](../../pages/nsc1035/n12678354.md) 
 #### [戈壁东：告别苦难 迎接曙光](../../pages/nsc1035/n12661413.md) 
 #### [费良勇：别了，悲伤的2020年！](../../pages/nsc1035/n12661266.md) 
-#### [我爱美国：为创世主赋予的自由而战的国度](../../pages/nsc1035/n12651996.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
