--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [蒋立智：“变种恐慌”病毒影响经济](../../pages/nsc1035/n12955438.md) 
 #### [清流：二婶，我就要找一个炼法轮功的女友（下）](../../pages/nsc1035/n12953189.md) 
 #### [造福社会和时代的法轮大法修炼人](../../pages/nsc1035/n12944018.md) 
 #### [川人：“世界法轮大法日”感怀](../../pages/nsc1035/n12932771.md) 
@@ -29,7 +30,6 @@
 #### [王芳：一位中国女诗人眼中的美国](../../pages/nsc1035/n12701160.md) 
 #### [美心理治疗师：真正的宽恕是什么？](../../pages/nsc1035/n12678354.md) 
 #### [戈壁东：告别苦难 迎接曙光](../../pages/nsc1035/n12661413.md) 
-#### [费良勇：别了，悲伤的2020年！](../../pages/nsc1035/n12661266.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
