--- a/indexes/nsc993/51.md
+++ b/indexes/nsc993/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共统治模式威胁世界](../../pages/nsc993/n12957622.md) 
+#### [李国涛：中共‧江山‧人民](../../pages/nsc993/n12957502.md) 
 #### [【网海拾贝】中共打江山原来就是打人民](../../pages/nsc993/n12954345.md) 
 #### [理悟：高智晟，你在哪里](../../pages/nsc993/n12953115.md) 
 #### [【投书】大陆中共病毒真实死亡人数被中共自己揭露](../../pages/nsc993/n12953050.md) 
@@ -28,8 +30,6 @@
 #### [金浴凤：风流子‧我曾经也想姓赵](../../pages/nsc993/n12920911.md) 
 #### [梳理三峡争议（2）——三峡大坝防洪能力几何](../../pages/nsc993/n12920173.md) 
 #### [【网海拾贝】中国大陆不是市场是陷阱](../../pages/nsc993/n12920143.md) 
-#### [千百度：大陆人口“继续保持增长”，你信吗？](../../pages/nsc993/n12918946.md) 
-#### [吐为快：谁不晓妖共这一套](../../pages/nsc993/n12918941.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
