--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：“延安整风”中毛泽东是怎样伪造中共历史的](../../pages/nsc1028/n12957562.md) 
 #### [王友群：批“党天下”的大右派储安平失踪之谜](../../pages/nsc1028/n12954229.md) 
 #### [花丛中的骑士：骑士精神简史](../../pages/nsc1028/n12952850.md) 
 #### [袁斌：毛的帝王般生活 却宣传成“与人民同甘共苦”](../../pages/nsc1028/n12938801.md) 
@@ -29,7 +30,6 @@
 #### [李勇：中共早年在香港纽约制造暴力恐怖纪实](../../pages/nsc1028/n12887922.md) 
 #### [张菁：文革中践踏人尊严的学习班](../../pages/nsc1028/n12888565.md) 
 #### [王友群：第九任中共党魁赵紫阳的最后结局](../../pages/nsc1028/n12888201.md) 
-#### [中共罪行录之七：百岁老人笔下的中共黑幕](../../pages/nsc1028/n12887429.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
