have a nice day!

--- a/indexes/nsc1025/93.md
+++ b/indexes/nsc1025/93.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】疫情下中共军备持续扩张](../../pages/nsc1025/n12960829.md) 
+#### [【名家专栏】中共大外宣在美投6400万美元](../../pages/nsc1025/n12960678.md) 
+#### [觅真：末日中共再显疯狂](../../pages/nsc1025/n12959857.md) 
+#### [王友群：内蒙古一杀人犯人大代表的离奇经历](../../pages/nsc1025/n12959736.md) 
+#### [王赫：《无尽边疆法案》反制中共的两重意义](../../pages/nsc1025/n12959234.md) 
 #### [钟原：中共藉巴以冲突掀对美新攻势](../../pages/nsc1025/n12958773.md) 
 #### [周晓辉：中共消灭地主包藏祸心 农学家预言成真](../../pages/nsc1025/n12958960.md) 
 #### [【名家专栏】中共军事威胁下澳大利亚如何应对](../../pages/nsc1025/n12958287.md) 
@@ -25,11 +30,6 @@
 #### [向真：褒奖与贺卡 彰显人心归向](../../pages/nsc1025/n12953141.md) 
 #### [程晓农：气候政策少为人知的迷惑](../../pages/nsc1025/n12952815.md) 
 #### [袁斌：新华社“还原”的学生坠楼“真相”可信吗？](../../pages/nsc1025/n12951854.md) 
-#### [王赫：为中国争光的在美华人](../../pages/nsc1025/n12904656.md) 
-#### [钟原：习近平戴口罩透露疫情或有多严重](../../pages/nsc1025/n12950721.md) 
-#### [岳山：胡春华随习视察无关刘鹤 另有他因](../../pages/nsc1025/n12950625.md) 
-#### [【名家专栏】中共科兴疫苗外交的多重危险](../../pages/nsc1025/n12949372.md) 
-#### [华盛顿总统智慧：宗教与道德为政治繁荣之本](../../pages/nsc1025/n12949450.md) 
 
 ---
-#### 第 [ [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) ] 页
+#### 第 [ [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) ] 页
