have a nice day!

--- a/indexes/nsc1025/93.md
+++ b/indexes/nsc1025/93.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [谢田：世界黑白颠倒 居然有人为大麻翻案](../../pages/nsc1025/n12965051.md) 
+#### [王友群：近期被查处的九个中共政法委书记](../../pages/nsc1025/n12964298.md) 
 #### [周晓辉：中共宪法画大饼 消灭企业家没商量](../../pages/nsc1025/n12963412.md) 
 #### [【有冇搞错】杭州失踪的金钱豹哪去了？](../../pages/nsc1025/n12961559.md) 
 #### [王赫：中俄关系两张脸](../../pages/nsc1025/n12962434.md) 
@@ -28,8 +30,6 @@
 #### [周晓辉：以色列精准打击哈马斯 北京怕不怕？](../../pages/nsc1025/n12956149.md) 
 #### [石铭：侵犯宗教信仰自由与人权者必受惩罚](../../pages/nsc1025/n12955402.md) 
 #### [陈思敏：刘鹤提后摩尔时代 北京造芯欲变道超车？](../../pages/nsc1025/n12954834.md) 
-#### [钟原：李克强说2亿人“灵活就业”透真相](../../pages/nsc1025/n12954485.md) 
-#### [王赫：中国经济迷思之三——机会还是威胁？](../../pages/nsc1025/n12954437.md) 
 
 ---
 #### 第 [ [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) ] 页
