--- a/indexes/nsc993/51.md
+++ b/indexes/nsc993/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】不要对中共抱任何幻想](../../pages/nsc993/n12965222.md) 
 #### [【网海拾贝】什么是共产党？](../../pages/nsc993/n12962781.md) 
 #### [吐为快：党、人民及走狗](../../pages/nsc993/n12962747.md) 
 #### [千百度：“小镇做题家”吐槽教育资源不公平](../../pages/nsc993/n12962705.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】中共党史就是部不断树敌史](../../pages/nsc993/n12932844.md) 
 #### [【网海拾贝】特斯拉的模本效应太震撼](../../pages/nsc993/n12925626.md) 
 #### [袁斌：网友吐槽春晚越来越难看](../../pages/nsc993/n12750619.md) 
-#### [【网海拾贝】退出中共，才能回到人民的怀抱](../../pages/nsc993/n12352634.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
