--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之十六：强迫孩子现场看杀人](../../pages/nsc1028/n12967431.md) 
 #### [中共罪行录之十五：吕正操所部残杀异己](../../pages/nsc1028/n12965097.md) 
 #### [中共罪行录之十四：在太行山区摧毁传统文化](../../pages/nsc1028/n12962619.md) 
 #### [中共罪行录之十三：在河北安国县的勒索和欺诈](../../pages/nsc1028/n12959911.md) 
@@ -29,7 +30,6 @@
 #### [王友群：第八任中共党魁胡耀邦的最后结局](../../pages/nsc1028/n12902918.md) 
 #### [中共罪行录之八：装甲兵司令员被活活整死](../../pages/nsc1028/n12897365.md) 
 #### [法国思想家托克维尔诠释堕入暴政的过程](../../pages/nsc1028/n12892901.md) 
-#### [袁斌：“皖南事变”是“千古奇冤”？](../../pages/nsc1028/n12892171.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
