--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】《毛泽东选集》真受大学生追捧？](../../pages/nsc993/n12968779.md) 
 #### [杨晖：文化局来查了之二：听证](../../pages/nsc993/n12966528.md) 
 #### [【网海拾贝】新版中共党史为文革翻案](../../pages/nsc993/n12967526.md) 
 #### [北隐：深圳赛格大厦晃动之我见](../../pages/nsc993/n12967393.md) 
@@ -29,7 +30,6 @@
 #### [李春草：木兰花·战狼与美谍](../../pages/nsc993/n12935995.md) 
 #### [源清晨：中共人](../../pages/nsc993/n12935589.md) 
 #### [曾慧燕：32年前那个纪念会 改变多少人命运](../../pages/nsc993/n12934233.md) 
-#### [【网海拾贝】经济脱钩是联手抗共成功的关键](../../pages/nsc993/n12934176.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
