have a nice day!

--- a/indexes/nsc1025/94.md
+++ b/indexes/nsc1025/94.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共假借数字人民币进行监控](../../pages/nsc1025/n12972134.md) 
+#### [周晓辉：各国政府公司站队 北京难挡反共大趋势](../../pages/nsc1025/n12972590.md) 
+#### [【名家专栏】NASA局长为何公开批评中共](../../pages/nsc1025/n12972118.md) 
+#### [陈思敏：甘肃马拉松惨案背后的“垄断生意”](../../pages/nsc1025/n12970449.md) 
+#### [觅真：枉判冤判何时了？](../../pages/nsc1025/n12971377.md) 
+#### [石铭：从九政法委书记落马看作恶必报的天理](../../pages/nsc1025/n12971260.md) 
+#### [周晓辉：洗脑片避谈两大惨祸 毛检讨为哪般？](../../pages/nsc1025/n12971285.md) 
 #### [王友群：著名法学家江平最刻骨铭心的经历](../../pages/nsc1025/n12970787.md) 
 #### [【名家专栏】疫情外的另一大死亡人群](../../pages/nsc1025/n12969711.md) 
 #### [【名家专栏】什么才是成功的美国外交？](../../pages/nsc1025/n12969843.md) 
@@ -23,13 +30,6 @@
 #### [王赫：中俄关系两张脸](../../pages/nsc1025/n12962434.md) 
 #### [陈思敏：深圳赛格大厦摇晃引发关注中国“挖矿”热](../../pages/nsc1025/n12962549.md) 
 #### [沈舟：里根号航母出动 美军升级战备](../../pages/nsc1025/n12962200.md) 
-#### [杨威：习近平连线核电站开工泄技术落后](../../pages/nsc1025/n12961265.md) 
-#### [【纪元专栏】邮寄选票立法或带来信任问题](../../pages/nsc1025/n12961571.md) 
-#### [【名家专栏】疫情下中共军备持续扩张](../../pages/nsc1025/n12960829.md) 
-#### [【名家专栏】中共大外宣在美投6400万美元](../../pages/nsc1025/n12960678.md) 
-#### [觅真：末日中共再显疯狂](../../pages/nsc1025/n12959857.md) 
-#### [王友群：内蒙古一杀人犯人大代表的离奇经历](../../pages/nsc1025/n12959736.md) 
-#### [王赫：《无尽边疆法案》反制中共的两重意义](../../pages/nsc1025/n12959234.md) 
 
 ---
-#### 第 [ [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) ] 页
+#### 第 [ [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) ] 页
