have a nice day!

--- a/indexes/nsc1025/94.md
+++ b/indexes/nsc1025/94.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：两弹一星功臣难逃迫害 核试验遗害至今](../../pages/nsc1025/n12974997.md) 
+#### [夏林：“躺平一代”与共产主义接班人](../../pages/nsc1025/n12975225.md) 
+#### [【有冇搞错】“躺平”对中共是个大威胁](../../pages/nsc1025/n12972867.md) 
+#### [王赫：芯片产业大跃进 中共越陷越深](../../pages/nsc1025/n12973363.md) 
+#### [黎智英资产被冻结之后：“抄家”国情的前世今生](../../pages/nsc1025/n12973438.md) 
+#### [沈舟：巴以冲突凸显科技和实力决定胜负](../../pages/nsc1025/n12973018.md) 
+#### [程晓农：美中关系现状剖析](../../pages/nsc1025/n12973375.md) 
 #### [【名家专栏】中共假借数字人民币进行监控](../../pages/nsc1025/n12972134.md) 
 #### [周晓辉：各国政府公司站队 北京难挡反共大趋势](../../pages/nsc1025/n12972590.md) 
 #### [【名家专栏】NASA局长为何公开批评中共](../../pages/nsc1025/n12972118.md) 
@@ -23,13 +30,6 @@
 #### [杨威：以巴宣布停火 中共又失意了](../../pages/nsc1025/n12966870.md) 
 #### [岳山：六中全会刀光剑影 副总理谁会被开刀？](../../pages/nsc1025/n12966646.md) 
 #### [【名家专栏】华为盘踞南营 中共间谍无处不在](../../pages/nsc1025/n12965959.md) 
-#### [谢田：世界黑白颠倒 居然有人为大麻翻案](../../pages/nsc1025/n12965051.md) 
-#### [王友群：近期被查处的九个中共政法委书记](../../pages/nsc1025/n12964298.md) 
-#### [周晓辉：中共宪法画大饼 消灭企业家没商量](../../pages/nsc1025/n12963412.md) 
-#### [【有冇搞错】杭州失踪的金钱豹哪去了？](../../pages/nsc1025/n12961559.md) 
-#### [王赫：中俄关系两张脸](../../pages/nsc1025/n12962434.md) 
-#### [陈思敏：深圳赛格大厦摇晃引发关注中国“挖矿”热](../../pages/nsc1025/n12962549.md) 
-#### [沈舟：里根号航母出动 美军升级战备](../../pages/nsc1025/n12962200.md) 
 
 ---
 #### 第 [ [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) ] 页
