--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
+#### [中共罪行录之十八：“文革”新贵们的贪腐（上）](../../pages/nsc1028/n12974074.md) 
 #### [中共罪行录之十七：大饥荒中的“荥经惨案”](../../pages/nsc1028/n12971424.md) 
 #### [张菁：文革中各种残酷的“站刑”和“坐刑”](../../pages/nsc1028/n12970477.md) 
 #### [中共罪行录之十六：强迫孩子现场看杀人](../../pages/nsc1028/n12967431.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之十一：延安整风](../../pages/nsc1028/n12908179.md) 
 #### [中共罪行之十：所谓“六四反革命暴乱”](../../pages/nsc1028/n12905872.md) 
 #### [一部反人类犯罪的历史——中共百年历史谈](../../pages/nsc1028/n12905134.md) 
-#### [张菁：文化大革命九十号及精神变物质](../../pages/nsc1028/n12904529.md) 
-#### [王友群：第八任中共党魁胡耀邦的最后结局](../../pages/nsc1028/n12902918.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
