--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】14亿人到底是吃什么吃饱的？](../../pages/nsc993/n12974125.md) 
 #### [【网海拾贝】“一带一路”博览会受西方冷遇](../../pages/nsc993/n12971787.md) 
 #### [千百度：网友揭中共神化大陆水稻专家袁隆平](../../pages/nsc993/n12971733.md) 
 #### [林泉：支持台湾艰苦抗疫共度时艰](../../pages/nsc993/n12971350.md) 
@@ -29,7 +30,6 @@
 #### [慧真：大陆实况奇闻录（一）](../../pages/nsc993/n12945811.md) 
 #### [陈达：人无避雷针](../../pages/nsc993/n12947098.md) 
 #### [【网海拾贝】比战狼更凶残的戳瞎外交](../../pages/nsc993/n12945717.md) 
-#### [【网海拾贝】共产党没底线，什么坏事都可能干](../../pages/nsc993/n12942090.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
