have a nice day!

--- a/indexes/nsc1025/95.md
+++ b/indexes/nsc1025/95.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：绝壁人工天河短命 背后充满血和泪](../../pages/nsc1025/n12980290.md) 
+#### [任重：保利香雪业主暴力抗共有示范效应](../../pages/nsc1025/n12979962.md) 
 #### [【有冇搞错】每一颗扭紧的螺丝钉都有罪](../../pages/nsc1025/n12977983.md) 
 #### [千百度：新华网和央视篡改事实真相被逮现行](../../pages/nsc1025/n12979046.md) 
 #### [王赫：甘肃夺命马拉松踢爆中国贫困真相](../../pages/nsc1025/n12978416.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】NASA局长为何公开批评中共](../../pages/nsc1025/n12972118.md) 
 #### [陈思敏：甘肃马拉松惨案背后的“垄断生意”](../../pages/nsc1025/n12970449.md) 
 #### [觅真：枉判冤判何时了？](../../pages/nsc1025/n12971377.md) 
-#### [石铭：从九政法委书记落马看作恶必报的天理](../../pages/nsc1025/n12971260.md) 
-#### [周晓辉：洗脑片避谈两大惨祸 毛检讨为哪般？](../../pages/nsc1025/n12971285.md) 
 
 ---
-#### 第 [ [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) / [87](./87.md) ] 页
+#### 第 [ [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) ] 页
