--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之二十：“打土豪”](../../pages/nsc1028/n12978961.md) 
 #### [中共罪行录之十九：“文革”新贵们的贪腐（下）](../../pages/nsc1028/n12976431.md) 
 #### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
 #### [中共罪行录之十八：“文革”新贵们的贪腐（上）](../../pages/nsc1028/n12974074.md) 
@@ -29,7 +30,6 @@
 #### [周晓辉：东方红曲调来自情歌 延安进行文革预演](../../pages/nsc1028/n12914429.md) 
 #### [袁斌：抗战胜利后谁挑起了内战？](../../pages/nsc1028/n12910568.md) 
 #### [中共罪行录之十一：延安整风](../../pages/nsc1028/n12908179.md) 
-#### [中共罪行之十：所谓“六四反革命暴乱”](../../pages/nsc1028/n12905872.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
