--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [王友群：台湾是个好地方 谁毁台湾谁有罪](../../pages/nsc1035/n12977761.md) 
 #### [美国精神的推动者 百年音乐家苏萨](../../pages/nsc1035/n12974542.md) 
 #### [千瑞：长望中原](../../pages/nsc1035/n12976554.md) 
 #### [部分海外原清华大学法轮大法弟子诗以咏志谢师恩](../../pages/nsc1035/n12957723.md) 
@@ -29,7 +30,6 @@
 #### [宇明：一生中最难忘的痛苦之“年”](../../pages/nsc1035/n12757663.md) 
 #### [傅华：琪儿的歌](../../pages/nsc1035/n12746849.md) 
 #### [向真：省思一亿人染疫的浩劫](../../pages/nsc1035/n12714820.md) 
-#### [郭军：父亲的脚后跟](../../pages/nsc1035/n12709210.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
