have a nice day!

--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [影评《抉择》 经历了这一切，当中国人还值得吗？](../../pages/nsc1035/n12983029.md) 
 #### [王友群：台湾是个好地方 谁毁台湾谁有罪](../../pages/nsc1035/n12977761.md) 
 #### [美国精神的推动者 百年音乐家苏萨](../../pages/nsc1035/n12974542.md) 
 #### [千瑞：长望中原](../../pages/nsc1035/n12976554.md) 
@@ -29,7 +30,6 @@
 #### [吴玉：好皮囊满街跑 有趣的灵魂《百里挑一》](../../pages/nsc1035/n12760835.md) 
 #### [宇明：一生中最难忘的痛苦之“年”](../../pages/nsc1035/n12757663.md) 
 #### [傅华：琪儿的歌](../../pages/nsc1035/n12746849.md) 
-#### [向真：省思一亿人染疫的浩劫](../../pages/nsc1035/n12714820.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
