--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共政权就建立在谎言上](../../pages/nsc993/n12981880.md) 
+#### [袁斌：“中国好声音”被叫停 网友：内地娱乐要完了](../../pages/nsc993/n12981826.md) 
 #### [【网海拾贝】只因你生在红色中国](../../pages/nsc993/n12979096.md) 
 #### [【网海拾贝】中共党史就是土匪发家史](../../pages/nsc993/n12976478.md) 
 #### [方能达：假借追悼袁隆平 中共虚情散臊腥](../../pages/nsc993/n12976396.md) 
@@ -28,8 +30,6 @@
 #### [【投书】大陆中共病毒真实死亡人数被中共自己揭露](../../pages/nsc993/n12953050.md) 
 #### [【网海拾贝】中共怎会容中国人讨要真相](../../pages/nsc993/n12952161.md) 
 #### [【网海拾贝】中国生育率可能降至全球最低](../../pages/nsc993/n12948793.md) 
-#### [颜纯钩：没有公义的社会有多可怕？](../../pages/nsc993/n12947626.md) 
-#### [付宁：基督徒为什么应该声援法轮功？](../../pages/nsc993/n12947233.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
