have a nice day!

--- a/indexes/nsc1025/95.md
+++ b/indexes/nsc1025/95.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】国际能源署以救地球之名破坏自由](../../pages/nsc1025/n12983977.md) 
+#### [【名家专栏】今年阵亡将士纪念意义非比寻常](../../pages/nsc1025/n12983996.md) 
+#### [田云：党媒对美国开骂 自曝中共一大难题](../../pages/nsc1025/n12984184.md) 
+#### [王赫：“百年党庆”与“僵尸效应”（一）](../../pages/nsc1025/n12983119.md) 
+#### [李林一：对欧盟四大误判 中共覆水难收](../../pages/nsc1025/n12983477.md) 
 #### [【名家专栏】勿重演苏联时代的“绥靖”政策](../../pages/nsc1025/n12982404.md) 
 #### [李靖宇：马斯克与马云 有何共同点？](../../pages/nsc1025/n12983064.md) 
 #### [【名家专栏】关于武汉病毒研究的7个事实](../../pages/nsc1025/n12982477.md) 
@@ -25,11 +30,6 @@
 #### [杨威：美放生“北溪二号”的对华战略考量](../../pages/nsc1025/n12968588.md) 
 #### [钟原：李克强浙江考察再透中国经济实情](../../pages/nsc1025/n12975789.md) 
 #### [中共数字人民币全球金融霸权的核心：区块链](../../pages/nsc1025/n12974568.md) 
-#### [杨威：俄不与中共结盟 不加入中美冷战 中共忙圆场](../../pages/nsc1025/n12975226.md) 
-#### [金言：深圳大厦晃动与摩天大楼诅咒](../../pages/nsc1025/n12975288.md) 
-#### [【名家专栏】捍卫国际宗教自由的利器](../../pages/nsc1025/n12975113.md) 
-#### [周晓辉：两弹一星功臣难逃迫害 核试验遗害至今](../../pages/nsc1025/n12974997.md) 
-#### [夏林：“躺平一代”与共产主义接班人](../../pages/nsc1025/n12975225.md) 
 
 ---
 #### 第 [ [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) / [88](./88.md) ] 页
