--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】必须查清中共病毒起源的真相](../../pages/nsc993/n12984276.md) 
+#### [林泉：躺平也是一种战斗](../../pages/nsc993/n12984194.md) 
 #### [【网海拾贝】中共政权就建立在谎言上](../../pages/nsc993/n12981880.md) 
 #### [袁斌：“中国好声音”被叫停 网友：内地娱乐要完了](../../pages/nsc993/n12981826.md) 
 #### [【网海拾贝】只因你生在红色中国](../../pages/nsc993/n12979096.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】中共打江山原来就是打人民](../../pages/nsc993/n12954345.md) 
 #### [理悟：高智晟，你在哪里](../../pages/nsc993/n12953115.md) 
 #### [【投书】大陆中共病毒真实死亡人数被中共自己揭露](../../pages/nsc993/n12953050.md) 
-#### [【网海拾贝】中共怎会容中国人讨要真相](../../pages/nsc993/n12952161.md) 
-#### [【网海拾贝】中国生育率可能降至全球最低](../../pages/nsc993/n12948793.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
