have a nice day!

--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共何时对得起纳税人了？](../../pages/nsc993/n12985578.md) 
+#### [千百度：躺平主义和加速主义，哪个对社会冲击更大？](../../pages/nsc993/n12985512.md) 
+#### [林泉：论认命可以而躺平不行](../../pages/nsc993/n12985505.md) 
 #### [【网海拾贝】必须查清中共病毒起源的真相](../../pages/nsc993/n12984276.md) 
 #### [林泉：躺平也是一种战斗](../../pages/nsc993/n12984194.md) 
 #### [【网海拾贝】中共政权就建立在谎言上](../../pages/nsc993/n12981880.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】CCTV的宣传好恐怖！](../../pages/nsc993/n12959984.md) 
 #### [【网海拾贝】中共统治模式威胁世界](../../pages/nsc993/n12957622.md) 
 #### [李国涛：中共‧江山‧人民](../../pages/nsc993/n12957502.md) 
-#### [【网海拾贝】中共打江山原来就是打人民](../../pages/nsc993/n12954345.md) 
-#### [理悟：高智晟，你在哪里](../../pages/nsc993/n12953115.md) 
-#### [【投书】大陆中共病毒真实死亡人数被中共自己揭露](../../pages/nsc993/n12953050.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
