have a nice day!

--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [张菁：她被逼每日吃一顿抹着秽物的窝头](../../pages/nsc1028/n12986487.md) 
+#### [袁斌：“六十一个阶级兄弟”中毒事件真相](../../pages/nsc1028/n12984234.md) 
 #### [中共罪行录之二十：“打土豪”](../../pages/nsc1028/n12978961.md) 
 #### [中共罪行录之十九：“文革”新贵们的贪腐（下）](../../pages/nsc1028/n12976431.md) 
 #### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：还原“恶霸地主黄世仁”的真相](../../pages/nsc1028/n12918879.md) 
 #### [袁斌：还原“恶霸地主刘文彩”的真相](../../pages/nsc1028/n12917801.md) 
 #### [周晓辉：东方红曲调来自情歌 延安进行文革预演](../../pages/nsc1028/n12914429.md) 
-#### [袁斌：抗战胜利后谁挑起了内战？](../../pages/nsc1028/n12910568.md) 
-#### [中共罪行录之十一：延安整风](../../pages/nsc1028/n12908179.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
