--- a/indexes/nsc993/52.md
+++ b/indexes/nsc993/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [李勇：FBI安邦定国故事（上）](../../pages/nsc993/n12987749.md) 
+#### [【网海拾贝】政法系大劫来临？](../../pages/nsc993/n12987596.md) 
 #### [【网海拾贝】中共何时对得起纳税人了？](../../pages/nsc993/n12985578.md) 
 #### [千百度：躺平主义和加速主义，哪个对社会冲击更大？](../../pages/nsc993/n12985512.md) 
 #### [林泉：论认命可以而躺平不行](../../pages/nsc993/n12985505.md) 
@@ -28,8 +30,6 @@
 #### [吐为快：党、人民及走狗](../../pages/nsc993/n12962747.md) 
 #### [千百度：“小镇做题家”吐槽教育资源不公平](../../pages/nsc993/n12962705.md) 
 #### [【网海拾贝】CCTV的宣传好恐怖！](../../pages/nsc993/n12959984.md) 
-#### [【网海拾贝】中共统治模式威胁世界](../../pages/nsc993/n12957622.md) 
-#### [李国涛：中共‧江山‧人民](../../pages/nsc993/n12957502.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
