have a nice day!

--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之二十一：所谓的“清除精神污染”](../../pages/nsc1028/n12987500.md) 
 #### [张菁：她被逼每日吃一顿抹着秽物的窝头](../../pages/nsc1028/n12986487.md) 
 #### [袁斌：“六十一个阶级兄弟”中毒事件真相](../../pages/nsc1028/n12984234.md) 
 #### [中共罪行录之二十：“打土豪”](../../pages/nsc1028/n12978961.md) 
@@ -29,7 +30,6 @@
 #### [亦然：改了又改的党史和无法改变的事实](../../pages/nsc1028/n12919443.md) 
 #### [袁斌：还原“恶霸地主黄世仁”的真相](../../pages/nsc1028/n12918879.md) 
 #### [袁斌：还原“恶霸地主刘文彩”的真相](../../pages/nsc1028/n12917801.md) 
-#### [周晓辉：东方红曲调来自情歌 延安进行文革预演](../../pages/nsc1028/n12914429.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
