--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,8 @@
 ### 纪元评论：感悟随笔
 ---
+#### [跨时空智慧：古老中国的自我提高艺术](../../pages/nsc1035/n12988506.md) 
+#### [陈大民：真正的自由需要人人回馈](../../pages/nsc1035/n12990148.md) 
+#### [今年的阵亡将士纪念日：自由的新生](../../pages/nsc1035/n12989540.md) 
 #### [阵亡将士纪念日：铭记那些献出生命的人](../../pages/nsc1035/n12985418.md) 
 #### [影评《抉择》 经历了这一切，当中国人还值得吗？](../../pages/nsc1035/n12983029.md) 
 #### [王友群：台湾是个好地方 谁毁台湾谁有罪](../../pages/nsc1035/n12977761.md) 
@@ -27,9 +30,6 @@
 #### [伊利夏提：消失在集中营的红衣女孩儿](../../pages/nsc1035/n12848360.md) 
 #### [向真：清明抒怀](../../pages/nsc1035/n12848172.md) 
 #### [晓风：为自己选择正确的未来](../../pages/nsc1035/n12778898.md) 
-#### [晓风：传统与信仰是现代文明的基础](../../pages/nsc1035/n12762161.md) 
-#### [吴玉：好皮囊满街跑 有趣的灵魂《百里挑一》](../../pages/nsc1035/n12760835.md) 
-#### [宇明：一生中最难忘的痛苦之“年”](../../pages/nsc1035/n12757663.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
