--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：毛泽东的接班人刘少奇之死](../../pages/nsc1028/n12991772.md) 
+#### [被遗忘的百年历史（III）1976至1989](../../pages/nsc1028/n12991962.md) 
+#### [被遗忘的百年历史（II）1950 至1976](../../pages/nsc1028/n12989161.md) 
+#### [被遗忘的百年历史（I）1920至1950](../../pages/nsc1028/n12986411.md) 
 #### [中共罪行录之二十一：所谓的“清除精神污染”](../../pages/nsc1028/n12987500.md) 
 #### [张菁：她被逼每日吃一顿抹着秽物的窝头](../../pages/nsc1028/n12986487.md) 
 #### [袁斌：“六十一个阶级兄弟”中毒事件真相](../../pages/nsc1028/n12984234.md) 
@@ -26,10 +30,6 @@
 #### [周晓辉：中共开七大时暗中勾结日军 后感谢侵华](../../pages/nsc1028/n12921960.md) 
 #### [张菁： 反右中一根绳子吊死一对夫妻](../../pages/nsc1028/n12921925.md) 
 #### [袁斌：编造出来的“南霸天”](../../pages/nsc1028/n12921133.md) 
-#### [叶书：165名中共空军 “反革命”累计改造逾3600年](../../pages/nsc1028/n12920034.md) 
-#### [亦然：改了又改的党史和无法改变的事实](../../pages/nsc1028/n12919443.md) 
-#### [袁斌：还原“恶霸地主黄世仁”的真相](../../pages/nsc1028/n12918879.md) 
-#### [袁斌：还原“恶霸地主刘文彩”的真相](../../pages/nsc1028/n12917801.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
